syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alt.proto.integrations";
option java_outer_classname = "CardDataProto";

package alt.integrations;

// Service for card-service to get full card data via external integration.
message GetFullCardDataRpcRequest {
  string card_id = 1;
}

message GetFullCardDataRpcResponse {
  string card_id = 1;
  string brand = 2;
  string number = 3;
  string expiration_date = 4;
  string cardholder_name = 5;
  string cvv = 6;
}

service CardDataService {
  rpc GetFullCardData(GetFullCardDataRpcRequest) returns (GetFullCardDataRpcResponse);
}
